--- a/codigoFonte/index.html
+++ b/codigoFonte/index.html
@@ -138,12 +138,8 @@
           <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
             <p>Duração: 1h40min
-              <br>Gênero: fantasia; aventura
-              <br>Ano: 2023
-              <br>Diretor: David Lowery
-              <br>Nota: 1.4</br>
+              Gênero: Fantasia, Aventura
             </p>   
             <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
@@ -154,14 +150,22 @@
           <img src="./src/img/the-inhabitant-2022-02.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Aquele que habita em mim</h2>
-            <p>Sinopse: <br>Uma adolescente com problemas na escola descobre que é descendente de uma lendária assassina. Quando pessoas começam a morrer a seu redor, ela começa a duvidar da própria sanidade.</br></p>
-            <p>Duração: 1h 36min
-              <br>Gênero: Suspense, horror
-              <br>Ano: 2023
-              <br>Diretor: Jerren Lauder
-              <br>Nota: 4.3</br>
+            <p>Duração: 1h36min
+              Gênero: Suspense, Terror
+            </p>
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./src/img/shazam.jpg" alt="Título do Filme">
+          <div class="info">
+            <h2>Shazam! Fúria dos Deuses</h2>
+            <p>Duração: 2h10min
+              Gênero: Ação; Aventura
             </p>   
-            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b9384a2e-4e28-42c2-929e-b9cb28507b67?autoplay=0&ref_=atv_cf_strg_wb" target="_blank"></a> </p>
+            <p>Onde Assistir: <a href="https://www.primevideo.com/dp/amzn1.dv.gti.b5d0ac26-93a2-4c12-89cb-b8a3540e263c?autoplay=0&ref_=atv_cf_strg_wb" target="_blank">AmazonPrime</a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
               Trailer</button>
           </div>
@@ -170,12 +174,56 @@
           <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
+            </p>     
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
+            </p>     
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
+            </p>     
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
+            </p>     
+            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
+            <button class="trailer-button" data-trailer="">Assista ao
+              Trailer</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="Título do Filme">
+          <div class="info">
+            <h2>Peter Pan</h2>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -186,12 +234,8 @@
           <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -202,92 +246,8 @@
           <img src="" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
-            </p>   
-            <p>Onde Assistir: <a href="" target="_blank"></a> </p>
-            <button class="trailer-button" data-trailer="">Assista ao
-              Trailer</button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="Título do Filme">
-          <div class="info">
-            <h2>Peter Pan</h2>
-            <p>Sinopse: <br></br></p>
-            <p>Duração: 
-              <br>Gênero: 
-              <br>Ano: 
-              <br>Diretor: 
-              <br>Nota: </br>
+            <p>Duração: 1h40min
+              Gênero: fantasia; aventura
             </p>   
             <p>Onde Assistir: <a href="" target="_blank"></a> </p>
             <button class="trailer-button" data-trailer="">Assista ao
@@ -303,13 +263,9 @@
           <img src="./src/img/peterpan.jpg" alt="Título do Filme">
           <div class="info">
             <h2>Peter Pan</h2>
-            <p>Sinopse: <br>Wendy Darling, uma jovem com medo de deixar sua casa de infância para trás, conhece Peter Pan, um menino que se recusa a crescer. Com seus irmãos e uma fada, Tinker Bell, ela viaja com Peter para o mundo mágico da Terra do Nunca. Lá, ela encontra um pirata perverso chamado Capitão Gancho, e embarca em uma aventura emocionante que vai mudar sua vida para sempre.</br></p>
             <p>Duração: 1h40min
-              <br>Gênero: fantasia; aventura
-              <br>Ano: 2023
-              <br>Diretor: David Lowery
-              <br>Nota: 1.4</br>
-            </p>   
+              Gênero: fantasia; aventura
+            </p>     
             <p>Onde Assistir: <a href="https://www.disneyplus.com/pt-br/movies/peter-pan-wendy/147B2rQASB09" target="_blank">Disney Plus</a> </p>
             <button class="trailer-button" data-trailer="https://www.youtube.com/embed/A_Mk8N6_CDA">Assista ao
               Trailer</button>
